# airline-management-system

./: CMakeLists.txt  README.md  flight.cpp  flight.h  main.cpp  mainwindow.cpp  mainwindow.h  passenger.cpp  passenger.h  payment.h  ticket.cpp  ticket.h
